I removed the problems from my Dockerfile